// Vitest Snapshot v1

exports[`Input > Input alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell-group t-cell-group--default"
    data-v-09f18958=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-09f18958=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          左对齐
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-09f18958=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-09f18958=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          居中
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control t-input__control--center"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-09f18958=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-09f18958=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          右对齐
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control t-input__control--right"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Input > Input limitVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0895f30e=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0895f30e=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="10"
            name=""
            placeholder="最大输入10个字符"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0895f30e=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0895f30e=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="最大输入10个字符，汉字算两个"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Input > Input mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Input 输入框
  </h1>
  <p
    class="summary"
  >
    空状态时的占位提示。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <!--v-if-->
    
    
    <div
      class="t-cell-group t-cell-group--default"
    >
      <div
        class="t-cell-group__title"
      >
        
        基础文本框
        
      </div>
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            标签文字
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
    >
      <div
        class="t-cell-group__title"
      >
        
        必填、选填文本框
        
      </div>
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            标签文字
          </div>
          
          <span
            class="t-cell--required"
          >
             *
          </span>
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            标签文字
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字 (选填)"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
    >
      <div
        class="t-cell-group__title"
      >
        
        无标题文本框
        
      </div>
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
    >
      <div
        class="t-cell-group__title"
      >
        
        带提示信息文本框
        
      </div>
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            标签文字
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <div
          class="t-cell__right"
        >
          <div
            class="t-cell__right-icon"
          >
            
            
            <svg
              class="t-icon t-icon-info-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
            
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
    >
      <div
        class="t-cell-group__title"
      >
        
        长标题文本框
        
      </div>
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            超长需换行的标签
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="预设文本"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 状态
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      文本框状态
    </p>
    
    <div
      class="t-cell-group t-cell-group--default"
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            标签文字
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-input__error"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            填写错误
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-input__error-msg"
          >
            提示信息
          </div>
          
        </div>
        <!--v-if-->
      </div>
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            不可编辑
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              readonly=""
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 特殊类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      特殊文本框类型
    </p>
    
    
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0b98d368=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0b98d368=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            输入密码
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              type="password"
            />
            <div
              class="t-input__wrap--icon"
            >
              <svg
                class="t-icon t-icon-close-circle-filled"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0b98d368=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0b98d368=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            验证码
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="输入验证码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <div
                data-v-0b98d368=""
                style="font-size: 16px;"
              >
                XYDZ
              </div>
              
            </div>
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0b98d368=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0b98d368=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入手机号码"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--text t-button--primary t-button--shape-rectangle"
                data-v-0b98d368=""
                role="button"
                style="height: 24px; padding: 0px;"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  发送验证码
                  
                </span>
              </button>
              
            </div>
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0b98d368=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0b98d368=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            价格
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input__control--right"
              maxlength="-1"
              name=""
              placeholder="0.00"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              元
            </div>
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0b98d368=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0b98d368=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            数量
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input__control--right"
              maxlength="-1"
              name=""
              placeholder="填写个数"
              type="text"
            />
            <!--v-if-->
            <div
              class="t-input__wrap--suffix"
            >
              个
            </div>
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      04 规格
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      文本框尺寸规格
    </p>
    
    
    <div
      class="t-cell-group t-cell-group--default"
      data-v-7806a704=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-7806a704=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            小规格H48
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-7806a704=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-medium"
        data-v-7806a704=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            中规格H56
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      05 内容位置
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      文本框内容位置
    </p>
    
    
    <div
      class="t-cell-group t-cell-group--default"
      data-v-09f18958=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-09f18958=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            左对齐
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-09f18958=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-09f18958=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            居中
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input__control--center"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-09f18958=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-09f18958=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__title"
        >
          
          <div
            class="t-input--label"
          >
            右对齐
          </div>
          
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control t-input__control--right"
              maxlength="-1"
              name=""
              placeholder="请输入文字"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      06 字数限制
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      文本框字数限制
    </p>
    
    
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0895f30e=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0895f30e=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="10"
              name=""
              placeholder="最大输入10个字符"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    <div
      class="t-cell-group t-cell-group--default"
      data-v-0895f30e=""
    >
      <!--v-if-->
      
      <div
        class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
        data-v-0895f30e=""
      >
        <div
          class="t-cell__left"
        >
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        <div
          class="t-cell__note"
        >
          
          <div
            class="t-input__wrap"
          >
            <input
              autocomplete="Off"
              class="t-input__control"
              maxlength="-1"
              name=""
              placeholder="最大输入10个字符，汉字算两个"
              type="text"
            />
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          
        </div>
        <!--v-if-->
      </div>
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input > Input sizeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell-group t-cell-group--default"
    data-v-7806a704=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-7806a704=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          小规格H48
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-7806a704=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-medium"
      data-v-7806a704=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          中规格H56
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Input > Input specialVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0b98d368=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0b98d368=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          输入密码
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            type="password"
          />
          <div
            class="t-input__wrap--icon"
          >
            <svg
              class="t-icon t-icon-close-circle-filled"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </div>
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0b98d368=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0b98d368=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          验证码
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="输入验证码"
            type="text"
          />
          <!--v-if-->
          <div
            class="t-input__wrap--suffix"
          >
            
            <div
              data-v-0b98d368=""
              style="font-size: 16px;"
            >
              XYDZ
            </div>
            
          </div>
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0b98d368=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0b98d368=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入手机号码"
            type="text"
          />
          <!--v-if-->
          <div
            class="t-input__wrap--suffix"
          >
            
            <button
              aria-disabled="false"
              class="t-button t-size-s t-button--text t-button--primary t-button--shape-rectangle"
              data-v-0b98d368=""
              role="button"
              style="height: 24px; padding: 0px;"
            >
              <!---->
              <span
                class="t-button__text"
              >
                
                发送验证码
                
              </span>
            </button>
            
          </div>
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0b98d368=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0b98d368=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          价格
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control t-input__control--right"
            maxlength="-1"
            name=""
            placeholder="0.00"
            type="text"
          />
          <!--v-if-->
          <div
            class="t-input__wrap--suffix"
          >
            元
          </div>
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
    data-v-0b98d368=""
  >
    <!--v-if-->
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
      data-v-0b98d368=""
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          数量
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control t-input__control--right"
            maxlength="-1"
            name=""
            placeholder="填写个数"
            type="text"
          />
          <!--v-if-->
          <div
            class="t-input__wrap--suffix"
          >
            个
          </div>
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Input > Input statusVue demo works fine 1`] = `
<div
  class="t-cell-group t-cell-group--default"
>
  <!--v-if-->
  
  <div
    class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      
      <div
        class="t-input--label"
      >
        标签文字
      </div>
      
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-input__wrap"
      >
        <input
          autocomplete="Off"
          class="t-input__control"
          maxlength="-1"
          name=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small t-input__error"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      
      <div
        class="t-input--label"
      >
        填写错误
      </div>
      
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-input__wrap"
      >
        <input
          autocomplete="Off"
          class="t-input__control"
          maxlength="-1"
          name=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-input__error-msg"
      >
        提示信息
      </div>
      
    </div>
    <!--v-if-->
  </div>
  <div
    class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
  >
    <div
      class="t-cell__left"
    >
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__title"
    >
      
      <div
        class="t-input--label"
      >
        不可编辑
      </div>
      
      <!--v-if-->
      <!--v-if-->
    </div>
    <div
      class="t-cell__note"
    >
      
      <div
        class="t-input__wrap"
      >
        <input
          autocomplete="Off"
          class="t-input__control"
          maxlength="-1"
          name=""
          readonly=""
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      
    </div>
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Input > Input typeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell-group t-cell-group--default"
  >
    <div
      class="t-cell-group__title"
    >
      
      基础文本框
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          标签文字
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
  >
    <div
      class="t-cell-group__title"
    >
      
      必填、选填文本框
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          标签文字
        </div>
        
        <span
          class="t-cell--required"
        >
           *
        </span>
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          标签文字
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字 (选填)"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
  >
    <div
      class="t-cell-group__title"
    >
      
      无标题文本框
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
  >
    <div
      class="t-cell-group__title"
    >
      
      带提示信息文本框
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          标签文字
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="请输入文字"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <div
        class="t-cell__right"
      >
        <div
          class="t-cell__right-icon"
        >
          
          
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="t-cell-group t-cell-group--default"
  >
    <div
      class="t-cell-group__title"
    >
      
      长标题文本框
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--bordered t-input t-input--size-small"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__title"
      >
        
        <div
          class="t-input--label"
        >
          超长需换行的标签
        </div>
        
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-input__wrap"
        >
          <input
            autocomplete="Off"
            class="t-input__control"
            maxlength="-1"
            name=""
            placeholder="预设文本"
            type="text"
          />
          <!--v-if-->
          <!--v-if-->
        </div>
        <!--v-if-->
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;
